--- a/Manual/HTML/css/main.css
+++ b/Manual/HTML/css/main.css
@@ -124,7 +124,7 @@ body {
         background-attachment: fixed;
     }
     body.dark {
-        background: url('../img/web-background-dark.jpg');
+        background-image: url('../img/web-background-dark.jpg');
     }
 }
 
@@ -543,7 +543,7 @@ tr.centered {
     border: none;
 }
 
-.whos-on-first-step1-table, .whos-on-first-step1-table td {
+.dark .whos-on-first-step1-table, .whos-on-first-step1-table, .whos-on-first-step1-table td {
     margin-left: auto;
     margin-right: auto;
     border: none;
@@ -555,15 +555,23 @@ tr.centered {
         padding: 0.45em 0.45em .7em .7em;
     }
 
-        .whos-on-first-step1-table th table, .whos-on-first-step1-table td table {
+        .whos-on-first-step1-table :is(th,td) table {
             width: 95%;
             margin-left: auto;
             margin-right: auto;
+        }
+        .dark .whos-on-first-step1-table :is(th,td) table td img,
+        .dark .whos-on-first-step1-table :is(th,td) table.eye-table td.button {
+            filter: invert(90%);
         }
 
 .whos-on-first-look-at-display {
     background-color: black;
     color: white;
+}
+.dark .whos-on-first-look-at-display {
+    background-color: #BBB;
+    color: #000;
 }
 
 .whos-on-first-step1-table td table td {
@@ -574,6 +582,7 @@ tr.centered {
     text-align: center;
     border: 1px solid black;
 }
+.dark .whos-on-first-step1-table td table :is(td, th) { border-color: #DDD; }
 
 .whos-on-first-step1-table td table th {
     font-size: 1em;
@@ -1177,3 +1186,42 @@ tr.centered {
 .dark td.empty, .dark th.empty, td.empty, th.empty {
     border: none;
 }
+
+p.caption {
+    margin: 0;
+    text-align: center;
+    font-weight: bold;
+}
+
+/* stacks up in the center with no spacing by default */
+.hstack {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.vstack {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+/* elements stack up on the left (top for a vstack) */
+.hstack.left, .vstack.top { justify-content: start; }
+/* stack up on the right (or bottom for a vstack) */
+.hstack.right, .vstack.bottom { justify-content: end; }
+/* fill available space by putting space between elements */
+:is(.hstack, .vstack).full { justify-content: space-between; }
+/* fill available space by putting space between elements and around them */
+:is(.hstack, .vstack).even { justify-content: space-evenly; }
+/* elements can wrap if space is too small */
+:is(.hstack, .vstack).wrap { flex-wrap: wrap; }
+/* align the centers of each element in the stack */
+:is(.hstack, .vstack).alignc { align-items: center; }
+/* align the top edges of each element (or left edges for a vstack) */
+.hstack.top, .vstack.left { align-items: flex-start; }
+/* align the bottom edges of each element (or right edges for a vstack) */
+.hstack.bottom, .vstack.right { align-items: flex-end; }
+/* put extra space between elements */
+:is(.hstack, .vstack).gap { gap: 5px; }
+:is(.hstack, .vstack).gap1 { gap: 10px; }
+:is(.hstack, .vstack).gap2 { gap: 20px; }
+:is(.hstack, .vstack).gap3 { gap: 30px; }
